--- a/markdown_generator/talks.ipynb
+++ b/markdown_generator/talks.ipynb
@@ -358,7 +358,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.9 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -372,7 +372,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.10.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "49cb93f377a7abe7414b7b0f21fb3017538004a126cf690fb524202736b7fb92"
+   }
   }
  },
  "nbformat": 4,
